lib/libcgroup-3.1.0/include/libcgroup/systemd.h

enum cgroup_systemd_mode_t {
	CGROUP_SYSTEMD_MODE_FAIL = 0,
	CGROUP_SYSTEMD_MODE_REPLACE,
	CGROUP_SYSTEMD_MODE_ISOLATE,
	CGROUP_SYSTEMD_MODE_IGNORE_DEPS,
	CGROUP_SYSTEMD_MODE_IGNORE_REQS,

	CGROUP_SYSTEMD_MODE_CNT,
	CGROUP_SYSTEMD_MODE_DFLT = CGROUP_SYSTEMD_MODE_REPLACE
};
/**
 * Options associated with creating a systemd scope
 */
struct cgroup_systemd_scope_opts {
	/** should systemd delegate this cgroup or not.  1 == yes, 0 == no */
	int delegated;
	/** systemd behavior when the scope already exists */
	enum cgroup_systemd_mode_t mode;
	/** pid to be placed in the cgroup.  if 0, libcgroup will create a dummy process */
	pid_t pid;
};
/**
 * Create a systemd scope under the specified slice
 *
 * @param scope_name Name of the scope, must end in .scope
 * @param slice_name Name of the slice, must end in .slice
 * @param opts Scope creation options structure instance
 *
 * @return 0 on success and > 0 on error
 */
int cgroup_create_scope(const char * const scope_name, const char * const slice_name,
			const struct cgroup_systemd_scope_opts * const opts);
/**
 * Create a systemd scope
 *
 * @param cgroup
 * @param ignore_ownership When nonzero, all errors are ignored when setting owner of the group
 *	owner of the group and/or its tasks file
 * @param opts Scope creation options structure instance
 *
 * @return 0 on success and > 0 on error
 *
 * @note The cgroup->name field should be of the form "foo.slice/bar.scope"
 */
int cgroup_create_scope2(struct cgroup *cgroup, int ignore_ownership,
			 const struct cgroup_systemd_scope_opts * const opts);
/**
 * Parse the systemd default cgroup's relative path from
 * /var/run/libcgroup/systemd and set it as default delegation cgroup
 * path, if available.
 *
 * The path is relative to cgroup root (default: /sys/fs/cgroup)
 *
 * @return 1 if a valid default slice/scope is set, 0 in all other cases
 */
int cgroup_set_default_systemd_cgroup(void);
/*
 * Write the specified slice and scope to the libcgroup systemd run file. This
 * slice and scope will then be used as the default cgroup root. Subsequent
 * libcgroup commands, cgget, etc., will utilize this slice and scope when
 * constructing the libcgroup path
 *
 * @param slice Slice name, e.g. libcgroup.slice
 * @param scope Scope name, e.g. database.scope
 */
int cgroup_write_systemd_default_cgroup(const char * const slice,
				        const char * const scope);