lib/libcgroup-3.1.0/include/libcgroup/init.h

struct cgroup_library_version {
	unsigned int major;
	unsigned int minor;
	unsigned int release;
};
/**
 * Query the library version information
 *
 * This function returns a pointer to a populated cgroup_library_version
 * struct.  The caller does not need to free the structure when finished.
 *
 */
const struct cgroup_library_version *cgroup_version(void);
/**
 * @defgroup group_init 1. Initialization
 * @{
 *
 * @name Initialization
 * @{
 * Application must initialize @c libcgroup using cgroup_init() before any
 * other @c libcgroup function can be called. @c libcgroup caches information
 * about mounted hierarchies (just what's mounted where, not the control groups
 * themselves) at this time. There is currently no way to refresh this cache,
 * i.e. all subsequent mounts/remounts/unmounts are not reflected in this cache
 * and @c libcgroup may produce unexpected results.
 *
 * In addition, there is no way how to clean the cache on application exit.
 *
 * @todo this is very bad... There should be at least way how to refresh the
 * cache and/or an option to refresh it automatically (does kernel provide
 * any indication, when a filesystem is mounted/unmounted?). Dtto the cleanup
 * on exit.
 */

/**
 * Initialize libcgroup. Information about mounted hierarchies are examined
 * and cached internally (just what's mounted where, not the groups themselves).
 *
 * If the cgroup logging was not set using cgroup_set_logger() or
 * cgroup_set_default_logger() before calling cgroup_init(), the default logger
 * is automatically set, logging CGROUP_LOG_ERROR messages.
 */
int cgroup_init(void);